tests/fixtures/invalid/float_mul_dict.py
# Cannot multiply Float and Dict[str, int]
x: float = 1.0 * {"a": 1}
